<resources>
    <string name="app_name">DSDSP-9100</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="config_title_main">설정</string>
    <string name="def_plus">+</string>
    <string name="def_minus">-</string>
    <string name="def_yes">예</string>
    <string name="def_no">아니오</string>
    <string name="def_ok">확인</string>
    <string name="def_apply">적용</string>
    <string name="def_cancel">취소</string>
    <string name="def_view">보기</string>
    <string name="def_upgrade">업그레이드</string>
    <string name="def_sd_format">SD 포멧</string>
    <string name="def_all_delete">모두지움</string>
    <string name="def_usb_sync">USB 동기화</string>
    <string name="def_usb_copy">USB 복사</string>
    <string name="config_title">설정</string>
    <string name="ci_general">기본 설정</string>
    <string name="ci_av">비디오/오디오 설정</string>
    <string name="ci_server">서버 설정</string>
    <string name="ci_lan">랜 설정</string>
    <string name="ci_wifi">무선랜 설정</string>
    <string name="ci_screen">화면 설정</string>
    <string name="ci_time">시간 설정</string>
    <string name="ci_advanced">고급 설정</string>
    <string name="ci_optional">부가 설정</string>
    <string name="ci_change_init_config">초기 설정 변경</string>
    <string name="ci_reset">초기화</string>
    <string name="ci_exit">나가기</string>
    <string name="ci_fw_ver">펌웨어 버전 : </string>
    <string name="ci_device_id">장치 아이디 : </string>
    <string name="ci_contents">컨텐츠 : </string>
    <string name="ci_tv_mode">TV 모드 : </string>
    <string name="ci_audio_mode">오디오 모드 : </string>
    <string name="ci_audio_volume">볼륨 : </string>
    <string name="ci_server_mode">서버 모드 : </string>
    <string name="ci_server_addr">서버 주소 : </string>
    <string name="ci_server_folder">서버 폴더 : </string>
    <string name="ci_server_port">서버 포트 : </string>
    <string name="ci_server_sync_interval">서버와의 동기화 간격(초) : </string>
    <string name="ci_screen_rotation_change">[ 화면 방향 변경 ]</string>
    <string name="ci_screen_pic_change">[ 사진 전환 ]</string>
    <string name="ci_screen_pic_change_effect">전환 효과 : </string>
    <string name="ci_screen_pic_change_time">시간 : </string>
    <string name="ci_screen_resize">[ 자동 크기조절 ]</string>
    <string name="ci_screen_resize_movie">영상 : </string>
    <string name="ci_screen_resize_pic">사진 : </string>
    <string name="ci_screen_caption">[ 자막 ]</string>
    <string name="ci_screen_caption_mode">자막 모드 : </string>
    <string name="ci_screen_caption_position">자막 위치 : </string>
    <string name="ci_screen_caption_color">색상 : </string>
    <string name="ci_screen_caption_bgcolor">배경 색상 : </string>
    <string name="ci_screen_caption_speed">속도 : </string>
    <string name="ci_screen_caption_font">폰트 종류 : </string>
    <string name="ci_screen_caption_font_size">폰트 크기 : </string>
    <string name="ci_screen_caption_rss_mode">RSS 모드 : </string>
    <string name="ci_screen_caption_rss_update_time">RSS 업데이트 시간 : </string>
    <string name="ci_screen_caption_rss_address">RSS 주소 : </string>
    <string name="ci_time_current_time_setting">현재 시간 설정</string>
    <string name="ci_time_zone">[ 타임존 ]</string>
    <string name="ci_time_display">[ 시간 표시 위치 ]</string>
    <string name="ci_time_position">위치 : </string>
    <string name="ci_time_color">색상 : </string>
    <string name="ci_time_bgcolor">배경 색상 : </string>
    <string name="ci_time_font">폰트 : </string>
    <string name="ci_time_font_size">폰트 크기 : </string>
    <string name="ci_auto_onoff">[ 자동 켜기/끄기 ]</string>
    <string name="ci_auto_onoff_mode">모드 : </string>
    <string name="ci_auto_onoff_ontime">켜지는 시간(HHMM) : </string>
    <string name="ci_auto_onoff_offtime">꺼지는 시간(HHMM) : </string>
    <string name="ci_select_op">[ 선택 사항 ]</string>
    <string name="ci_select_op_sd">SD에 컨텐츠 없을때 기본 컨텐츠 재생 : </string>
    <string name="ci_select_op_log_save">SD에 로그 파일 저장 : </string>
    <string name="ci_select_op_log_save_day">로그 파일 저장 일수 : </string>
    <string name="ca_msg_apply_config">적용되었습니다.</string>
    <string name="ca_msg_invalid_fontsize">폰트크기는 4 ~ 256 입니다.</string>
    <string name="msg_ugrade_same_version">현재 펌웨어와 같은 버젼입니다.</string>
    <string name="msg_confirm_ums_sync">USB 저장장치가 연결되었습니다.\n동기화 하시겠습니까?</string>
    <string name="msg_ums_sync_dialog">USB 저장장치와 동기화를 시작 합니다.</string>
    <string name="msg_ums_sync_dialog_copy">USB 저장장치에서 데이터를 복사합니다.</string>
    <string name="msg_ums_sync_dialog_delete">파일 삭제중</string>
    <string name="msg_ums_sync_dialog_running">%1$s 복사중</string>
    <string name="msg_ums_sync_dialog_completed">완료되었습니다.\nUSB 저장장치를 제거하여 주십시오.</string>
    <string name="msg_not_detected_ums">USB저장장치가 연결되어 있지 않습니다.</string>
    <string name="msg_confirm_delete_all">모든 데이터를 삭제하시겠습니까?</string>
    <string name="msg_completed_delete_all">모든 데이터가 삭제되었습니다.</string>
    <string name="msg_confirm_usb_sync">USB와 동기화 하시겠습니까?</string>
    <string name="msg_confirm_usb_copy">USB의 데이터를 복사하시겠습니까?</string>
    <string name="msg_confirm_reset_config">초기화 하시겠습니까?</string>
    <string name="ci_screen_rotation">화면 설정</string>
    <string name="ci_screen_direction">화면 방향 전환 : </string>
    <string name="msg_confirm_format_sdcard">SD카드를 포맷하시겠습니까?</string>
</resources>
